--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
 /* Write your CSS here! */
+
+/* body {
+    background-color: yellow;
+    text-align: center;
+  }
+  
+  p {
+    color: green;
+  }
+  
+  h1, h2 {
+    font-size: 36px;
+    text-align: center
+  }
+  
+  #cool-text {
+    color: blue;
+  }
+  
+  li {
+    color: purple;
+  } */
+
+body {
+    background-color: tan;
+}
+
+h1 {
+    text-align: center;
+    color: brown
+}
+h2 {
+    text-align: center;
+    color: chocolate
+}
+
+cd ..
