--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,5 @@
 /* Write your CSS here! */
 
-/* body {
-    background-color: yellow;
-    text-align: center;
-  }
-  
-  p {
-    color: green;
-  }
-  
-  h1, h2 {
-    font-size: 36px;
-    text-align: center
-  }
-  
-  #cool-text {
-    color: blue;
-  }
-  
-  li {
-    color: purple;
-  } */
-
 body {
     background-color: tan;
 }
@@ -35,4 +13,11 @@ h2 {
     color: chocolate
 }
 
-cd ..
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+    height: 500px;
+}
+
